#6177 Fix avatar border, improve layout on Safari

--- a/src/app/styles/components/source/_source-card.scss
+++ b/src/app/styles/components/source/_source-card.scss
@@ -23,7 +23,7 @@ div.source-card__content {
 .source-card__heading {
   svg {
     color: $opaque-black-54;
-    margin-#{to-direction}: units(1);
+    margin-#{$to-direction}: units(1);
   }
 }
 
