--- a/src/app/styles/helpers/_images.scss
+++ b/src/app/styles/helpers/_images.scss
@@ -1,6 +1,6 @@
 @mixin background-cover {
   background-position: center;
-  background-repeat: 'no-repeat';
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
